membuat form tambah persyaratan

--- a/index.html
+++ b/index.html
@@ -509,10 +509,131 @@
 
                   <div class="row mt-2 mb-3">
                     <div class="text-end">
-                      <button type="button" class="btn btn-outline-primary">
+                      <button
+                        type="button"
+                        class="btn btn-outline-primary"
+                        data-bs-toggle="modal"
+                        data-bs-target="#verticalycentered">
                         <i class="ri-file-edit-line"></i>
                         Tambah Persyaratan Lembaga
                       </button>
+                      <div
+                        class="modal fade"
+                        id="verticalycentered"
+                        tabindex="-1">
+                        <div class="modal-dialog modal-dialog-centered">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title">
+                                Tambah Persyaratan Lembaga
+                              </h5>
+                              <button
+                                type="button"
+                                class="btn-close"
+                                data-bs-dismiss="modal"
+                                aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                              <form>
+                                <div class="row g-3 mt-2">
+                                  <div class="col-md-12">
+                                    <label
+                                      for="input-jenis-dokumen"
+                                      class="form-label d-flex justify-content-start">
+                                      Jenis Dokumen
+                                      <sup class="text-danger">*</sup>
+                                    </label>
+                                    <select
+                                      id="input-jenis-dokumen"
+                                      class="form-select">
+                                      <option selected>Choose...</option>
+                                      <option>...</option>
+                                    </select>
+                                  </div>
+
+                                  <div class="row g-3">
+                                    <div class="col-md-12">
+                                      <label
+                                        for="input-nama-surat"
+                                        class="form-label d-flex justify-content-start">
+                                        Nama Surat
+                                        <sup class="text-danger">*</sup>
+                                      </label>
+                                      <input
+                                        type="text"
+                                        class="form-control"
+                                        id="input-nama-surat"
+                                        required />
+                                    </div>
+                                  </div>
+
+                                  <div class="row g-3">
+                                    <div class="col-md-12">
+                                      <label
+                                        for="input-no-surat"
+                                        class="form-label d-flex justify-content-start">
+                                        Nomor Surat
+                                        <sup class="text-danger">*</sup>
+                                      </label>
+                                      <input
+                                        type="text"
+                                        class="form-control"
+                                        id="input-no-surat"
+                                        required />
+                                    </div>
+                                  </div>
+
+                                  <div class="row g-3">
+                                    <div class="col-md-12">
+                                      <label
+                                        for="input-keluarkan"
+                                        class="form-label d-flex justify-content-start">
+                                        Mengeluarkan
+                                        <sup class="text-danger">*</sup>
+                                      </label>
+                                      <input
+                                        type="text"
+                                        class="form-control"
+                                        id="input-keluarkan"
+                                        required />
+                                    </div>
+                                  </div>
+
+                                  <div class="row g-3">
+                                    <div class="col-md-12">
+                                      <label
+                                        for="input-file-surat"
+                                        class="form-label d-flex justify-content-start">
+                                        File Surat
+                                        <sup class="text-danger">*</sup>
+                                      </label>
+                                      <input
+                                        type="file"
+                                        class="form-control"
+                                        id="input-file-surat"
+                                        required />
+                                      <span
+                                        class="badge bg-primary d-flex justify-content-start">
+                                        File harus berupa PDF
+                                      </span>
+                                    </div>
+                                  </div>
+                                </div>
+                              </form>
+                            </div>
+                            <div class="modal-footer">
+                              <button
+                                type="submit"
+                                class="btn btn-primary"
+                                data-bs-dismiss="modal">
+                                <i class="ri-file-edit-line"></i>
+                                Simpan data
+                              </button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- End Vertically centered Modal-->
                     </div>
                   </div>
 
