--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                             </div>
                             <div class="modal-body">
                               <form>
-                                <div class="row g-3 mt-2">
+                                <div class="row g-3">
                                   <div class="col-md-12">
                                     <label
                                       for="input-jenis-dokumen"
